# es

./: .gitignore  Cargo.toml  README.md  UNIFIED_SORT.md  benchmark_heatmap.sh  compare_sort_with_output.sh  create_heatmaps.py  generate_datasets.sh  gensort_bench.sh  lineitem_sort_bench_ovc.sh  min_memory_size.ipynb  run_length_experiment.sh  run_size_analysis.ipynb  sort_yellow_trip.sh
dataset_generator/: download_yellow_trip.sh  yellow_trip_parquet_to_csv.py
examples/: create_test_parquet_with_dates.rs  csv_lineitem_benchmark_cli.rs  csv_thread_scaling.rs  gen_sort_cli.rs  gen_sort_cli_ovc.rs  lineitem_benchmark_cli.rs  lineitem_benchmark_cli_ovc.rs  parquet_lineitem_benchmark_cli.rs  parquet_thread_scaling.rs  policy_demo.rs  separate_phases_example.rs  unified_sort_cli.rs  yellow_trip_sort_cli.rs  zipf_gensort.rs
src/: aligned_buffer.rs  aligned_reader.rs  aligned_writer.rs  constants.rs  csv_input_direct.rs  file.rs  gensort_input_direct.rs  global_file_manager.rs  io_stats.rs  kll.rs  lib.rs  main.rs  managed_aligned_reader.rs  managed_aligned_writer.rs  merge.rs  order_preserving_encoding.rs  parquet_input_direct.rs  rand.rs  run.rs  sort_buffer.rs  sort_policy.rs  sorter.rs
src/diskio/: aligned_reader.rs  aligned_writer.rs  file.rs  io_stats.rs  mod.rs
src/input_reader/: csv_input_direct.rs  mod.rs  (+2 more)
tests/: README.md  cleanup_test.rs  external_sorter_integration_tests.rs  external_sorter_stress_tests.rs  external_sorter_tests.rs  external_sorter_with_ovc_tests.rs  parallel_merge_test.rs  simple_test.rs  test_gensort_input.rs  test_separate_phases.rs
(+17 files in other folders)
