[package]
name = "es"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
rand = "0.9.2"
rand_distr = "0.5.0"
parquet = { version = "55.2.0" }
arrow = "55.2.0"
bytes = "1.10.1"
crossbeam = "0.8.4"
hex = "0.4.3"
chrono = "0.4.41"
clap = { version = "4.5.2", features = ["derive"] }

[dev-dependencies]
tempfile = "3.2"